--- a/src/app/components/Header.module.css
+++ b/src/app/components/Header.module.css
@@ -1,14 +1,49 @@
 .header {
   width: 100%;
+  margin-bottom: 5px;
+}
+
+.wrapper {
   display: flex;
+  align-items: center;
   justify-content: space-between;
 }
 
-.nav_list {
+.col {
   display: flex;
-  list-style: none;
+  align-items: center;
+  gap: 20px;
+
+  p {
+    background-color: orange;
+    padding: 5px 20px;
+    border-radius: 1.5rem;
+    font-size: 20px;
+    color: #fff;
+    font-weight: 700;
+  }
 }
 
-.nav_item {
-  margin: 0 5px;
+.h1 {
+  display: flex;
+  align-items: center;
+  height: 100px;
+  font-size: 40px;
+}
+
+.nav {
+  display: flex;
+  height: 50px;
+  font-size: 20px;
+  color: #fff;
+  background-color: #211ab1;
+  font-weight: 700;
+}
+
+.nav_list {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  list-style: none;
 }
