--- a/src/app/components/Header.module.css
+++ b/src/app/components/Header.module.css
@@ -11,6 +11,8 @@
 
 .col {
   display: flex;
+  flex-direction: wrap;
+  justify-content: center;
   align-items: center;
   gap: 20px;
 
@@ -20,6 +22,7 @@
     border-radius: 1.5rem;
     font-size: 20px;
     color: #fff;
+    font-size: 1rem;
     font-weight: 700;
   }
 }
