--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -36,6 +36,10 @@ a {
   text-decoration: none;
 }
 
+p {
+  line-height: 1.7rem;
+}
+
 @media (prefers-color-scheme: dark) {
   html {
     color-scheme: dark;
