--- a/src/app/components/Main.module.css
+++ b/src/app/components/Main.module.css
@@ -1,3 +1,7 @@
+.main {
+  padding-bottom: 30px;
+}
+
 .wrapper {
   display: flex;
   flex-direction: column;
@@ -10,7 +14,22 @@
   font-size: 2.5rem;
   color: #333;
   text-align: center;
-  margin: 50px 0;
+  margin: 80px 0 50px;
+}
+
+.h2 {
+  font-size: 2.8rem;
+  color: #ffffff;
+  text-align: center;
+  margin: 30px 0 10px;
+  padding: 10px 50px;
+  background-color: #e12727;
+  border-radius: 30px;
+}
+
+.cap {
+  font-size: 16px;
+  margin-bottom: 30px;
 }
 
 .para {
