--- a/src/app/components/Section.module.css
+++ b/src/app/components/Section.module.css
@@ -71,3 +71,26 @@
   padding: 23px;
   background-color: #d1d1d1;
 }
+
+.map_container {
+  display: flex;
+  width: 100%;
+  height: 400px;
+  margin-top: 20px;
+  gap: 30px;
+}
+
+.map_caption {
+  font-size: 1.2rem;
+
+  text-align: left;
+
+  p {
+    margin-bottom: 30px;
+
+    span {
+      color: red;
+      font-weight: bold;
+    }
+  }
+}
