--- a/src/app/components/First_view.module.css
+++ b/src/app/components/First_view.module.css
@@ -1,5 +1,10 @@
-.fv {
-  width: 1100px;
-  height: 450px;
-  overflow: hidden;
+.kvSwiper {
+  width: 100%;
+  height: 650px;
+}
+
+.kvSwiper img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
