--- a/src/app/components/Header.module.css
+++ b/src/app/components/Header.module.css
@@ -38,9 +38,11 @@
   display: flex;
   height: 50px;
   font-size: 20px;
-  color: #fff;
+  color: #ffffff;
   background-color: #211ab1;
   font-weight: 700;
+  text-align: center;
+  border-bottom: 1px solid #ccc;
 }
 
 .nav_list {
@@ -49,4 +51,14 @@
   align-items: center;
   justify-content: space-around;
   list-style: none;
+}
+
+.nav_list li {
+  flex: 1;
+  text-align: center;
+  border-right: 1px solid #ccc;
+}
+
+.nav_list li:last-child {
+  border-right: none;
 }
