--- a/src/app/components/Section.module.css
+++ b/src/app/components/Section.module.css
@@ -11,7 +11,6 @@
 .list {
   display: flex;
   flex-wrap: wrap;
-  align-items: center;
   justify-content: space-between;
   margin-top: 20px;
   list-style: none;
@@ -19,7 +18,6 @@
 
 .listItem {
   width: 31%;
-  height: 220px;
   margin-bottom: 20px;
   padding: 23px;
   border: 1px solid #5840e1;
@@ -93,4 +91,26 @@
       font-weight: bold;
     }
   }
+}
+
+.priceTable {
+  width: 90%;
+  margin: 0 auto;
+  border-collapse: collapse;
+  border-spacing: 0;
+  font-size: 20px;
+  margin: 40px auto;
+
+  td {
+    padding: 2% 5px;
+    border-bottom: 1px solid #bbbbbb;
+  }
+}
+
+.menu {
+  width: 23%;
+}
+
+.price_en {
+  width: 15%;
 }
