--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,3 +1,7 @@
+@import "swiper/css";
+@import "swiper/css/navigation";
+@import "swiper/css/pagination";
+
 :root {
   --background: #ffffff;
   --foreground: #171717;
@@ -37,7 +41,7 @@ a {
 }
 
 p {
-  line-height: 1.7rem;
+  line-height: 1.8rem;
 }
 
 @media (prefers-color-scheme: dark) {
