🚧 9回目のコミットです

--- a/src/app/components/Footer.module.css
+++ b/src/app/components/Footer.module.css
@@ -1,9 +1,16 @@
 .footer {
   background-color: #282c34;
   color: white;
-  height: 300px;
   text-align: center;
   padding: 20px;
   width: 100%;
   margin-top: 100px;
+}
+
+.footerList {
+  display: flex;
+  gap: 30px;
+  justify-content: center;
+  list-style: none;
+  padding: 0;
 }
