--- a/src/app/components/Header.module.css
+++ b/src/app/components/Header.module.css
@@ -1,9 +1,12 @@
 .header {
+  margin: 0 auto;
   width: 100%;
   margin-bottom: 5px;
 }
 
 .wrapper {
+  width: 1100px;
+  margin: 0 auto;
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -46,7 +49,8 @@
 }
 
 .nav_list {
-  width: 100%;
+  width: 1100px;
+  margin: 0 auto;
   display: flex;
   align-items: center;
   justify-content: space-around;
