--- a/src/app/components/Footer.module.css
+++ b/src/app/components/Footer.module.css
@@ -2,7 +2,7 @@
   background-color: #282c34;
   color: white;
   text-align: center;
-  padding: 20px;
+  padding: 30px 0;
   width: 100%;
   margin-top: 100px;
 }
@@ -13,4 +13,11 @@
   justify-content: center;
   list-style: none;
   padding: 0;
+}
+
+.footerSocial {
+  display: flex;
+  gap: 30px;
+  justify-content: center;
+  margin-bottom: 30px;
 }
