--- a/src/app/components/Header.module.css
+++ b/src/app/components/Header.module.css
@@ -1,7 +1,6 @@
 .header {
   margin: 0 auto;
   width: 100%;
-  margin-bottom: 5px;
 }
 
 .wrapper {
@@ -40,12 +39,11 @@
 .nav {
   display: flex;
   height: 50px;
-  font-size: 20px;
+  font-size: 16px;
   color: #ffffff;
-  background-color: #211ab1;
+  background-color: #2584ff;
   font-weight: 700;
   text-align: center;
-  border-bottom: 1px solid #ccc;
 }
 
 .nav_list {
@@ -65,4 +63,10 @@
 
 .nav_list li:last-child {
   border-right: none;
+}
+.navItem {
+  display: block;
+  padding: 2% 0;
+  color: #ffffff;
+  text-decoration: none;
 }
