--- a/src/app/components/Starter.module.css
+++ b/src/app/components/Starter.module.css
@@ -5,7 +5,6 @@
 }
 
 .h2 {
-  margin-top: 50px;
   font-size: 36px;
   text-align: center;
 }
@@ -15,13 +14,21 @@
   justify-content: center;
   list-style: none;
   margin: 50px 0 70px;
-  gap: 85px;
+  gap: 70px;
   text-align: center;
-  font-size: 20px;
-  font-weight: 700;
 
-  p {
-    margin-top: 20px;
+  li {
+    flex: 1;
+
+    h3 {
+      font-size: 24px;
+      margin-top: 10px;
+    }
+
+    p {
+      text-align: left;
+      margin-top: 20px;
+    }
   }
 }
 
