--- a/src/app/components/Main.module.css
+++ b/src/app/components/Main.module.css
@@ -1,6 +1,6 @@
 .main {
   padding-bottom: 30px;
-  width: 1100px;
+  max-width: 1100px;
   margin: 0 auto;
 }
 
@@ -39,4 +39,17 @@
   font-size: 1rem;
   color: #666;
   text-align: center;
+}
+
+/* メディアクエリ */
+@media (max-width: 768px) {
+  .h1 {
+    font-size: 20px;
+  }
+  .main {
+    padding: 0 10px;
+  }
+  .main h2 {
+    font-size: 1.5rem;
+  }
 }
