--- a/src/app/components/Section.module.css
+++ b/src/app/components/Section.module.css
@@ -1,5 +1,5 @@
 .wrapper {
-  width: 1100px;
+  max-width: 1100px;
   margin: 0 auto;
   padding-top: 50px;
 }
@@ -14,7 +14,7 @@
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
-  margin-top: 20px;
+  margin: 20px 0 50px;
   list-style: none;
 }
 
@@ -38,23 +38,23 @@
   color: #555;
 }
 
-.qalist {
+.qa_list {
   width: 100%;
   border: 1px solid #e6e6e6;
   padding: 20px;
   list-style: none;
-  margin-bottom: 20px;
+  margin-bottom: 50px;
 }
 
-.qalist li {
+.qa_list li {
   padding: 20px;
 }
 
-.qalist h2 {
+.qa_list h2 {
   padding: 10px;
 }
 
-.qalist p {
+.qa_list p {
   padding: 10px;
 }
 
@@ -75,7 +75,7 @@
 .map_container {
   display: flex;
   width: 100%;
-  height: 400px;
+  height: 450px;
   margin-top: 20px;
   gap: 30px;
 }
@@ -93,6 +93,11 @@
       font-weight: bold;
     }
   }
+}
+
+.map_frame {
+  width: 60%;
+  height: 100%;
 }
 
 .priceSection {
@@ -147,4 +152,38 @@
   background-color: #6495ed;
   padding: 5px 15px;
   border-radius: 10px;
+}
+
+/* メディアクエリ */
+@media (max-width: 768px) {
+  .list {
+    flex-direction: column;
+    padding: 0 10px;
+    margin: 50px 0 30px;
+  }
+  .listItem {
+    width: 100%;
+  }
+  .qa_list {
+    border: none;
+    padding: 0;
+  }
+  .map_container {
+    padding: 0 10px;
+    flex-direction: column;
+    height: auto;
+  }
+  .map_frame {
+    width: 100%;
+    height: 350px;
+  }
+  .priceTable {
+    font-size: 16px;
+  }
+  .menu {
+    width: 35%;
+  }
+  .price_en {
+    width: 25%;
+  }
 }
